# X-ify

./: .env.example  .gitignore  README.md  agent.md  llm.py  pyproject.toml  pyvenv.cfg
.pytest_cache/v/cache/: lastfailed  nodeids
docs/: google-x-signin.md  orchestration-a2a-cursor-plan.md  overview.md  x-scrape-standalone.md
docs/superpowers/plans/: 2026-04-24-x-scrape-playwright-standalone.md
examples/: project_brief.example.txt  rules.example.yaml
hooks/: x-scrape.md
output/: x_scrape.json
scripts/: x_scrape.py
src/cli/: x_scrape_cli.py
src/scraper/: models.py  normalize.py  x_timeline.py
src/service/: __init__.py  app.py  server.py
src/xautomation/: __init__.py  __main__.py  models.py  output.py  pipeline.py  rules_config.py  settings.py  trial.py
src/xautomation/api/: app.py  schemas.py
src/xautomation/matching/: __init__.py  llm_rank.py  rules.py  test_llm.py
src/xautomation/scraper/: __init__.py  browser.py  collect.py  selectors.py
tests/: test_api_health.py  test_browser_profile_split.py  test_collect_parse.py  test_default_user_data_dir.py  test_rules_config.py  test_rules_filter.py
tests/cli/: test_x_scrape_cli_args.py
tests/integration/: test_output_contract.py
tests/scraper/: test_normalize.py
tests/service/: test_loopback_binding.py  test_scrape_endpoint_contract.py
